# vscode-python-14570

./: README.md  pyproject.toml
my_namespace/scripts/: foo.py
tests/: test_scripts.py
