[tool.poetry]
name = "my-namespace-scripts"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "my_namespace" }
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=1.0,<1.1"]
build-backend = "poetry.masonry.api"
